[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/card_textured.gd" type="Script" id=1]
[ext_resource path="res://scenes/hint_frame.tscn" type="PackedScene" id=2]

[node name="Card" type="Control"]
offset_right = 150.0
offset_bottom = 210.0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )

[node name="CardOuter" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
expand = true
stretch_mode = 6

[node name="HintFrame" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
